--- a/zip_log.yaml
+++ b/zip_log.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Test Playbook
+- name: Zips logs
   hosts: all
   become: true
   become_method: sudo
@@ -7,7 +7,6 @@
   ignore_errors: false
   tasks:
     - name: Perform find command
-      shell: "find  /var/log/  -type f    -name *.log   -mtime +90   -exec gzip -v9 {} +"
-    
+      shell: "find /var/log/ -type f -name *.log -mtime +90 -exec gzip -v9 {} +"
     - name: Perform find command on size of a file
-      shell: "find   /var/log    -type f    -name  *.log     -mtime +90    -exec gzip -v9 {} +"
+      shell: "find /var/log -type f -size +1G -name *.log -exec gzip -v9 {} +"
